--- a/FE/confusion/package.json
+++ b/FE/confusion/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.17.4",
+    "antd": "^5.18.3",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.23.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
